--added-exports not needed anymore in scriptedLaunchOpts